# plexe

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: integration.yml  publish.yml  semantic-release.yml  setup-python.yml
docker/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/api/: Dockerfile  app.py  main.py
docker/api/app/models/: requests.py  responses.py
docker/api/app/routes/: jobs.py  models.py  predictions.py
docker/api/app/services/: metadata.py  prediction.py  queue.py
docker/tests/scripts/: model_build.py  prediction.py
docker/ui/: Dockerfile  app.py
docker/worker/: Dockerfile  main.py
docker/worker/services/: metadata.py  queue.py
docs/architecture/: multi-agent-system.md
examples/: dataset_augmentation.py  dataset_generation.py  house_prices.py  run_with_mlflow.py  santander_customer_transactions.py  santander_transactions.py  spaceship_titanic.py
plexe/core/: storage.py
scripts/: dumpcode.py
smolmodels/: callbacks.py  config.py  constraints.py  directives.py  errors.py  exceptions.py  function.py  instructions.py  main.py  models.py
tests/: test_constraints.py  test_data_generation.py  test_exceptions.py
tests/benchmark/: README.md  mle-bench-config.yaml.jinja  mle_bench.py
tests/integration/: README.md  test_binary_classification.py  test_customer_churn.py  test_integration_heart_attack_prediction.py  test_model_description.py  (+8 more)
(+61 files in other folders)
