[tool.poetry]
name = "smolmodels"
version = "0.1.0"
description = ""
authors = [
    "marcellodebernardi <marcello.debernardi@outlook.com>",
    "vaibs-d <vaibhavatlamarts@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''
